--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Commemorating HNRS 103 in Greece
+email: taylo230@wwu.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This final project is the offspring of my thoughts both during and after the trip, my interest in photography, and my passion for computer science. I hope you enjoy it!
 baseurl: "/jekyll-theme-libretto" # the subpath of your site, e.g. /blog
 url: "https://ferrolho.github.io" # the base hostname & protocol for your site
-github_username:    jekyll
-instagram_username: jekyllrb
-twitter_username:   jekyllrb
+# baseurl: "/hnrs103-greece" # the subpath of your site, e.g. /blog
+# url: "https://KTaylor8.github.io" # the base hostname & protocol for your site
+github_username:    KTaylor8
 
 # Build settings
 markdown: kramdown
